# geopolitical-simulation

./: .env.example  .env.local  .gitignore  Makefile  README.md  docker-compose.yml  next.config.js  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  tsconfig.tsbuildinfo
.claude/: settings.local.json
.next/: app-build-manifest.json  trace
.next/server/: app-paths-manifest.json  edge-runtime-webpack.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
.next/server/src/: middleware.js
.next/server/vendor-chunks/: @anthropic-ai.js  @hookform.js  @supabase.js  abort-controller.js  agentkeepalive.js  clsx.js  cookie.js  d3-array.js  d3-color.js  d3-dispatch.js  d3-drag.js  d3-ease.js  d3-geo.js  d3-interpolate.js  d3-selection.js  d3-timer.js  d3-transition.js  d3-zoom.js  date-fns.js  event-target-shim.js  form-data-encoder.js  formdata-node.js  framer-motion.js  humanize-ms.js  iceberg-js.js  lucide-react.js  ms.js  (+18 more)
apps/api/: config.py  database.py  main.py
apps/web/: index.html  package.json  tailwind.config.js  vite.config.ts
apps/workers/: celery_app.py
infra/docker/: api.Dockerfile  web.Dockerfile  worker.Dockerfile
infra/migrations/: alembic.ini  env.py
infra/nginx/: nginx.conf
infra/scripts/: seed_entities.py  seed_sources.py
src/: middleware.ts
src/app/: globals.css  layout.tsx
src/lib/: anthropic.ts  country-coords.ts  mock-data.ts  monte-carlo.ts  redis.ts  risk-engine.ts  utils.ts
src/scripts/: bootstrap.ts
src/types/: index.ts
src/workers/: queue.ts  risk-scorer.ts  signal-ingester.ts
supabase/migrations/: 001_initial.sql  002_seed.sql  003_predictions.sql
(+239 files in other folders)
