[tool.poetry]
name = "georisk"
version = "0.1.0"
description = "Geopolitical Risk Intelligence Platform"
authors = []
packages = [
    { include = "apps" },
    { include = "packages" },
]

[tool.poetry.dependencies]
python = "^3.11"

# API
fastapi = "^0.111.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"

# Database
sqlalchemy = { version = "^2.0.0", extras = ["asyncio"] }
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.0"
pgvector = "^0.3.0"

# Cache / Queue
redis = { version = "^5.0.0", extras = ["hiredis"] }
celery = { version = "^5.4.0", extras = ["redis"] }

# HTTP / Scraping
httpx = "^0.27.0"
feedparser = "^6.0.11"
trafilatura = "^1.9.0"

# NLP
spacy = "^3.7.0"
sentence-transformers = "^3.0.0"
rapidfuzz = "^3.9.0"
langdetect = "^1.0.9"

# Data / Numerics
pandas = "^2.2.0"
numpy = "^1.26.0"
scipy = "^1.13.0"

# Elasticsearch
elasticsearch = { version = "^8.13.0", extras = ["async"] }

# Auth / Security
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
python-multipart = "^0.0.9"

# Utilities
structlog = "^24.2.0"
tenacity = "^8.3.0"
python-dotenv = "^1.0.0"
pytz = "^2024.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-httpx = "^0.30.0"
httpx = "^0.27.0"
black = "^24.4.0"
ruff = "^0.4.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
